# light-controller

./: CMakeLists.txt  README.md  project.config
docs/: CMakeLists.txt  creator.css  creator_footer.html  doxyfile.in  mainpage.dox
files/: light_controller_appd  light_controller_continuous.sh  light_controller_continuousd  motion_led_controller_appd  motion_led_controller_continuous.sh  motion_led_controller_continuousd  set_led.sh
src/: CMakeLists.txt  light_controller.c  log.h  motion_led_controller.c
